Checkpoint: redesign and recent tx
