# ios/Bablo/Bablo/openapi.yml
@@ -153,6 +153,34 @@ paths:
  
         '401':
           description: Unauthorized
+  /transactions/recent:
+    get:
+      summary: Retrieves recent transactions associated with all accounts.
+      operationId: getRecentTransactions
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: maxCount
+          required: false
+          in: query
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: An array of transactions
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  transactions:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Transaction'
+                    minItems: 0
+ 
+        '401':
+          description: Unauthorized          
   /link-token:
     post:
       summary: Generates a Link token
@@ -250,7 +278,7 @@ components:
       required:
         - id
         - bank_name
-        - accounts      
+        - accounts
       properties:
         id:
           type: integer
@@ -258,6 +286,12 @@ components:
         bank_name:
           type: string
           description: The name of the bank.
+        logo:
+          type: string
+          description: bank logo
+        primary_color:
+          type: string
+          description: bank primary color
         accounts:
           type: array
           items:
